# interpretability-foundations

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy-space.yml
apps/hatefulmemes-space/: README.md  app.py  generic_background.npz  requirements.txt
apps/hatefulmemes-space/tests/: test_app_smoke.py
docs/: PLAYBOOK.md
docs/decisions/: 001-mimic-code-only.md  002-eraser-data-and-truncation.md  003-hateful-memes-licence-and-modality-shapley.md  004-vqa-pipelines-and-vision-ablation.md  005-probing-pythia-and-control-tasks.md
docs/superpowers/plans/: 2026-05-26-multimodal-hatefulmemes.md  2026-05-26-text-eraser.md  2026-05-26-vqa-aokvqa.md  2026-05-27-mechanistic-pythia.md
docs/superpowers/specs/: 2026-05-26-multimodal-hatefulmemes-design.md  2026-05-26-text-eraser-design.md  2026-05-26-vqa-aokvqa-design.md  2026-05-27-mechanistic-pythia-design.md
legacy/v1/: README.md
legacy/v1/awake-main/: README.md
projects/01-tabular-mimic/: README.md  REPORT.md  cohort_stats.json  feature_agreement.csv  justfile  metrics.json
projects/01-tabular-mimic/configs/: cohort.yaml  features.yaml  models.yaml
projects/01-tabular-mimic/notebooks/: 01-model-explanations.html  01-model-explanations.ipynb  01-model-explanations.py
projects/01-tabular-mimic/scripts/: 00_build_cohort.py  01_extract_features.py  02_make_splits.py  10_train.py  11_eval.py  _data.py  _models.py  _paths.py
projects/01-tabular-mimic/tests/: conftest.py  test_cohort_smoke.py  test_training_smoke.py
projects/02-text-eraser/: README.md  REPORT.md  justfile  metrics.json
projects/02-text-eraser/configs/: data.yaml  explainers.yaml  model.yaml
projects/02-text-eraser/notebooks/: 01-explainer-comparison.html  01-explainer-comparison.ipynb  01-explainer-comparison.py
projects/02-text-eraser/scripts/: 00_fetch_data.py  01_prepare.py  10_train.py  20_explain.py  30_eval.py  _explainers.py  _model_adapter.py  _paths.py  _stub_model.py
projects/02-text-eraser/tests/: conftest.py  test_explain_eval_smoke.py  test_prepare_smoke.py  test_train_smoke.py
projects/03-multimodal-hatefulmemes/: README.md  REPORT.md  justfile  metrics.json
projects/03-multimodal-hatefulmemes/configs/: clip_b32.yaml  clip_l14.yaml  train.yaml
projects/03-multimodal-hatefulmemes/notebooks/: 01-modality-attribution.html  01-modality-attribution.ipynb  01-modality-attribution.py
projects/03-multimodal-hatefulmemes/scripts/: 00_data.py  01_encode.py  10_train.py  11_eval.py  15_background.py  20_attribute.py  _models.py  _paths.py  _stub.py  build_generic_background.py
projects/03-multimodal-hatefulmemes/tests/: conftest.py  test_attribute_smoke.py  test_data_smoke.py  test_train_smoke.py
projects/04-vqa-aokvqa/: README.md  REPORT.md
projects/04-vqa-aokvqa/configs/: data.yaml  pipelines.yaml
projects/04-vqa-aokvqa/notebooks/: 01-vqa-consistency.html  01-vqa-consistency.ipynb  01-vqa-consistency.py
projects/04-vqa-aokvqa/scripts/: 00_data.py  10_run_pipelines.py  20_probe.py  30_eval.py  _models.py  _paths.py  _prompts.py  _stub.py
projects/04-vqa-aokvqa/tests/: conftest.py  test_data_smoke.py  test_eval_smoke.py  (+1 more)
projects/05-mechanistic-pythia/: README.md  REPORT.md
src/awake/: __init__.py
tests/: test_eval_attribution.py  test_eval_bootstrap.py  test_eval_cluster_bootstrap.py  test_eval_erasure.py  test_eval_explainers.py  test_eval_faithfulness.py  test_eval_modality_shapley.py  test_eval_plausibility.py  test_eval_probing.py  test_eval_text_occlusion.py  test_eval_vqa_consistency.py  test_seeding.py  test_viz.py
(+53 files in other folders)
